Fixing a silly margin on mobile

--- a/resources/css/layout/grid.less
+++ b/resources/css/layout/grid.less
@@ -10,6 +10,10 @@
     margin-left: (@gridGutterWidth / -2);
     margin-right: (@gridGutterWidth / -2);
 
+    @media screen and (max-width: @breakPointTablet) {
+        margin: 0;
+    }
+
     .clearfix;
 
     .div-grid, .width1, .width2, .width3, .width4, .width5, .width6, .width7, .width8, .width9, .width10, .width11, .width12 {
